# aktiv-generation-uppsala

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  buildspec.yml  manage.py  pyproject.toml  quality.mk  requirements.txt  setup.bat  storages_backend.py
apps/core/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py  0002_activity_future_event.py  0003_remove_activity_is_active.py  0004_alter_activity_date_alter_activity_description_and_more.py  0005_remove_activity_image_activityimage.py  0006_remove_organization_model.py
apps/core/static/core/css/: activities.css  (+4 more)
apps/core/templates/core/: base.html  privacy_policy.html
apps/mail/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/mail/migrations/: 0001_initial.py  0002_remove_message_is_replied.py  0003_adminreply.py  0004_remove_is_read_from_adminreply.py
apps/mail/templates/mail/: mail-reply.html  mail-us.html
apps/photo/: admin.py  apps.py  models.py  tests.py  views.py
apps/photo/management/commands/: import_media_images.py  import_static_images.py
apps/photo/migrations/: 0001_initial.py  0002_photo_url_path_alter_photo_image.py
configuration/: settings.py  urls.py  wsgi.py
configuration/settings/: __init__.py  base.py  development.py  production.py
core/: context_processors.py  views.py
core/static/core/css/: style.css
core/templates/core/: base.html  privacy_policy.html
core/templates/core/includes/: navbar.html
static/core/css/: navbar.css  privacy_policy.css  style.css
(+12 files in other folders)
